Convert hosted service tests to real Pure compilation
- Removed all mock SQL - tests now use full Pure compilation pipeline
- Pure query → PureCompiler → SQLGenerator → DuckDB → JSON
- Tests verify real EXISTS subquery for to-many filter
- Tests verify real LEFT OUTER JOIN for to-many projection
- Extends AbstractDatabaseTest for shared setup
- All 12 tests pass