@@ -1,12 +1,17 @@
 package org.finos.legend.engine.test;
 
+import org.finos.legend.engine.plan.RelationNode;
 import org.finos.legend.engine.server.*;
+import org.finos.legend.engine.transpiler.DuckDBDialect;
+import org.finos.legend.engine.transpiler.SQLDialect;
+import org.finos.legend.engine.transpiler.SQLGenerator;
+import org.finos.legend.pure.dsl.PureCompiler;
 import org.finos.legend.pure.dsl.definition.*;
 import org.junit.jupiter.api.*;
 
 import java.io.*;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
 import java.nio.charset.StandardCharsets;
 import java.sql.*;
 
@@ -15,86 +20,94 @@ import static org.junit.jupiter.api.Assertions.*;
 /**
  * Integration tests for the hosted service infrastructure.
  * 
+ * Uses real DuckDB database and full Pure language compilation pipeline:
+ * - Pure query → PureCompiler → RelationNode → SQLGenerator → SQL → DuckDB →
+ * JSON
+ * 
  * Tests:
- * - Service definition parsing
+ * - Service definition parsing (Pure syntax)
+ * - Real Pure query compilation to SQL
  * - HTTP server with service routing
  * - ResultSet JSON serialization
- * - Path parameter extraction
+ * - Path parameter binding
+ * - Association navigation (JOINs and EXISTS)
  */
 @DisplayName("Hosted Service Integration Tests")
-class HostedServiceIntegrationTest {
+class HostedServiceIntegrationTest extends AbstractDatabaseTest {
 
-    private Connection connection;
     private ServiceServer server;
     private int serverPort;
 
-    // ==================== Pure Source Definitions ====================
+    @Override
+    protected SQLDialect getDialect() {
+        return DuckDBDialect.INSTANCE;
+    }
 
-    private static final String PERSON_SERVICE = """
-            Service model::PersonByLastName
-            {
-                pattern: '/api/person/{lastName}';
-                function: |Person.all()->filter({p | $p.lastName == $lastName});
-                documentation: 'Returns people by last name';
-            }
-            """;
+    @Override
+    protected String getJdbcUrl() {
+        return "jdbc:duckdb:"; // In-memory DuckDB
+    }
+
+    // ==================== Pure Service Definitions ====================
 
     private static final String ALL_PERSONS_SERVICE = """
             Service model::AllPersons
             {
                 pattern: '/api/persons';
-                function: |Person.all();
+                function: |Person.all()->project({p | $p.firstName}, {p | $p.lastName}, {p | $p.age});
                 documentation: 'Returns all people';
+            }
+            """;
+
+    private static final String PERSONS_BY_LASTNAME_SERVICE = """
+            Service model::PersonsByLastName
+            {
+                pattern: '/api/persons/{lastName}';
+                function: |Person.all()->filter({p | $p.lastName == $lastName})->project({p | $p.firstName}, {p | $p.lastName});
+                documentation: 'Returns people by last name';
+            }
+            """;
+
+    private static final String PERSONS_WITH_ADDRESSES_SERVICE = """
+            Service model::PersonsWithAddresses
+            {
+                pattern: '/api/persons-with-addresses';
+                function: |Person.all()->project({p | $p.firstName}, {p | $p.addresses.street}, {p | $p.addresses.city});
+                documentation: 'Returns all persons with their addresses (LEFT OUTER JOIN)';
+            }
+            """;
+
+    private static final String PERSONS_BY_CITY_SERVICE = """
+            Service model::PersonsByCity
+            {
+                pattern: '/api/persons-by-city/{city}';
+                function: |Person.all()->filter({p | $p.addresses.city == $city})->project({p | $p.firstName});
+                documentation: 'Returns persons who have an address in the specified city (EXISTS subquery)';
             }
             """;
 
     @BeforeEach
     void setUp() throws Exception {
-        // Create in-memory DuckDB
-        connection = DriverManager.getConnection("jdbc:duckdb:");
+        // Set up DuckDB connection and database
+        connection = DriverManager.getConnection(getJdbcUrl());
+        sqlGenerator = new SQLGenerator(getDialect());
+        setupDatabase(); // Creates T_PERSON and T_ADDRESS tables
+        setupMappingRegistry(); // Sets up Pure model, mapping registry, and compiler
 
-        // Create test table
-        try (Statement stmt = connection.createStatement()) {
-            stmt.execute("""
-                    CREATE TABLE T_PERSON (
-                        ID INTEGER PRIMARY KEY,
-                        FIRST_NAME VARCHAR(100),
-                        LAST_NAME VARCHAR(100),
-                        AGE INTEGER
-                    )
-                    """);
-
-            stmt.execute("INSERT INTO T_PERSON VALUES (1, 'John', 'Smith', 30)");
-            stmt.execute("INSERT INTO T_PERSON VALUES (2, 'Jane', 'Smith', 28)");
-            stmt.execute("INSERT INTO T_PERSON VALUES (3, 'Bob', 'Jones', 45)");
-        }
-
-        // Create service registry with mock executors
+        // Create service registry with REAL Pure-compiled executors
         ServiceRegistry registry = new ServiceRegistry();
 
-        // Register a simple service that returns all persons
-        ServiceDefinition allPersonsDef = PureDefinitionParser.parseServiceDefinition(ALL_PERSONS_SERVICE);
-        registry.register(allPersonsDef, (pathParams, queryParams, conn) -> {
-            try (Statement stmt = conn.createStatement();
-                    ResultSet rs = stmt.executeQuery(
-                            "SELECT FIRST_NAME as \"firstName\", LAST_NAME as \"lastName\", AGE as \"age\" FROM T_PERSON")) {
-                return ResultSetJsonSerializer.serializeAsArray(rs);
-            }
-        });
+        // Service 1: Get all persons
+        registerService(registry, ALL_PERSONS_SERVICE);
 
-        // Register service with path parameter
-        ServiceDefinition personByNameDef = PureDefinitionParser.parseServiceDefinition(PERSON_SERVICE);
-        registry.register(personByNameDef, (pathParams, queryParams, conn) -> {
-            String lastName = pathParams.get("lastName");
-            try (PreparedStatement stmt = conn.prepareStatement(
-                    "SELECT FIRST_NAME as \"firstName\", LAST_NAME as \"lastName\", AGE as \"age\" " +
-                            "FROM T_PERSON WHERE LAST_NAME = ?")) {
-                stmt.setString(1, lastName);
-                try (ResultSet rs = stmt.executeQuery()) {
-                    return ResultSetJsonSerializer.serializeAsArray(rs);
-                }
-            }
-        });
+        // Service 2: Get persons by lastName (path parameter)
+        registerServiceWithFilter(registry, PERSONS_BY_LASTNAME_SERVICE, "lastName");
+
+        // Service 3: Get persons with addresses (LEFT OUTER JOIN)
+        registerService(registry, PERSONS_WITH_ADDRESSES_SERVICE);
+
+        // Service 4: Get persons by city (EXISTS subquery via association filter)
+        registerServiceWithFilter(registry, PERSONS_BY_CITY_SERVICE, "city");
 
         // Start server on random available port
         server = new ServiceServer(0, registry, () -> connection);
@@ -102,12 +115,63 @@ class HostedServiceIntegrationTest {
         serverPort = server.getPort();
     }
 
+    /**
+     * Registers a service that executes its Pure function directly.
+     * No path parameters - just compile and run.
+     */
+    private void registerService(ServiceRegistry registry, String servicePure) {
+        ServiceDefinition def = PureDefinitionParser.parseServiceDefinition(servicePure);
+        String pureQuery = def.functionBody();
+
+        registry.register(def, (pathParams, queryParams, conn) -> {
+            // Compile Pure to SQL using the real compilation pipeline
+            RelationNode plan = pureCompiler.compile(pureQuery);
+            String sql = sqlGenerator.generate(plan);
+
+            try (Statement stmt = conn.createStatement();
+                    ResultSet rs = stmt.executeQuery(sql)) {
+                return ResultSetJsonSerializer.serializeAsArray(rs);
+            }
+        });
+    }
+
+    /**
+     * Registers a service with a path parameter filter.
+     * The filter value is substituted into the WHERE clause.
+     */
+    private void registerServiceWithFilter(ServiceRegistry registry, String servicePure, String paramName) {
+        ServiceDefinition def = PureDefinitionParser.parseServiceDefinition(servicePure);
+        String pureQueryTemplate = def.functionBody();
+
+        registry.register(def, (pathParams, queryParams, conn) -> {
+            String paramValue = pathParams.get(paramName);
+
+            // Replace $paramName with the actual value in the Pure query
+            // This is a simplified parameter binding - in production you'd use prepared
+            // statements
+            String pureQuery = pureQueryTemplate.replace("$" + paramName, "'" + paramValue + "'");
+
+            // Compile Pure to SQL using the real compilation pipeline
+            RelationNode plan = pureCompiler.compile(pureQuery);
+            String sql = sqlGenerator.generate(plan);
+
+            System.out.println("Service: " + def.simpleName());
+            System.out.println("  Pure Query: " + pureQuery);
+            System.out.println("  Generated SQL: " + sql);
+
+            try (Statement stmt = conn.createStatement();
+                    ResultSet rs = stmt.executeQuery(sql)) {
+                return ResultSetJsonSerializer.serializeAsArray(rs);
+            }
+        });
+    }
+
     @AfterEach
     void tearDown() throws Exception {
         if (server != null) {
             server.stop(0);
         }
-        if (connection != null) {
+        if (connection != null && !connection.isClosed()) {
             connection.close();
         }
     }
@@ -117,11 +181,11 @@ class HostedServiceIntegrationTest {
     @Test
     @DisplayName("Parse service definition with path parameter")
     void testParseServiceDefinition() {
-        ServiceDefinition def = PureDefinitionParser.parseServiceDefinition(PERSON_SERVICE);
+        ServiceDefinition def = PureDefinitionParser.parseServiceDefinition(PERSONS_BY_LASTNAME_SERVICE);
 
-        assertEquals("model::PersonByLastName", def.qualifiedName());
-        assertEquals("PersonByLastName", def.simpleName());
-        assertEquals("/api/person/{lastName}", def.pattern());
+        assertEquals("model::PersonsByLastName", def.qualifiedName());
+        assertEquals("PersonsByLastName", def.simpleName());
+        assertEquals("/api/persons/{lastName}", def.pattern());
         assertEquals(1, def.pathParams().size());
         assertEquals("lastName", def.pathParams().getFirst());
         assertEquals("Returns people by last name", def.documentation());
@@ -141,19 +205,20 @@ class HostedServiceIntegrationTest {
     @Test
     @DisplayName("Service pattern converts to regex correctly")
     void testPatternToRegex() {
-        ServiceDefinition def = PureDefinitionParser.parseServiceDefinition(PERSON_SERVICE);
+        ServiceDefinition def = PureDefinitionParser.parseServiceDefinition(PERSONS_BY_LASTNAME_SERVICE);
         var regex = def.toRegexPattern();
 
-        assertTrue(regex.matcher("/api/person/Smith").matches());
-        assertTrue(regex.matcher("/api/person/Jones").matches());
-        assertFalse(regex.matcher("/api/person").matches());
-        assertFalse(regex.matcher("/api/person/Smith/extra").matches());
+        assertTrue(regex.matcher("/api/persons/Smith").matches());
+        assertTrue(regex.matcher("/api/persons/Jones").matches());
+        assertFalse(regex.matcher("/api/persons").matches());
+        assertFalse(regex.matcher("/api/persons/Smith/extra").matches());
     }
 
-    // ==================== HTTP Server Tests ====================
+    // ==================== HTTP Server with Real Pure Compilation
+    // ====================
 
     @Test
-    @DisplayName("GET /api/persons returns all people as JSON")
+    @DisplayName("GET /api/persons uses real Pure compilation → SQL → JSON")
     void testGetAllPersons() throws Exception {
         String response = httpGet("/api/persons");
 
@@ -163,16 +228,18 @@ class HostedServiceIntegrationTest {
         assertTrue(response.startsWith("["));
         assertTrue(response.endsWith("]"));
 
-        // Verify contains expected data
+        // Verify contains expected data from DuckDB
         assertTrue(response.contains("\"firstName\":\"John\""));
         assertTrue(response.contains("\"firstName\":\"Jane\""));
         assertTrue(response.contains("\"firstName\":\"Bob\""));
+        assertTrue(response.contains("\"lastName\":\"Smith\""));
+        assertTrue(response.contains("\"lastName\":\"Jones\""));
     }
 
     @Test
-    @DisplayName("GET /api/person/{lastName} returns filtered results")
-    void testGetPersonByLastName() throws Exception {
-        String response = httpGet("/api/person/Smith");
+    @DisplayName("GET /api/persons/{lastName} uses real Pure filter → SQL WHERE")
+    void testGetPersonsByLastName() throws Exception {
+        String response = httpGet("/api/persons/Smith");
 
         System.out.println("Response: " + response);
 
@@ -182,12 +249,13 @@ class HostedServiceIntegrationTest {
 
         // Should NOT contain Bob Jones
         assertFalse(response.contains("\"firstName\":\"Bob\""));
+        assertFalse(response.contains("\"lastName\":\"Jones\""));
     }
 
     @Test
-    @DisplayName("GET /api/person/{lastName} with no matches returns empty array")
-    void testGetPersonNoMatches() throws Exception {
-        String response = httpGet("/api/person/Unknown");
+    @DisplayName("GET /api/persons/{lastName} with no matches returns empty array")
+    void testGetPersonsNoMatches() throws Exception {
+        String response = httpGet("/api/persons/Unknown");
 
         System.out.println("Response: " + response);
 
@@ -198,17 +266,62 @@ class HostedServiceIntegrationTest {
     @Test
     @DisplayName("GET unknown path returns 404")
     void testNotFound() throws Exception {
-        HttpURLConnection conn = (HttpURLConnection) new URL("http://localhost:" + serverPort + "/api/unknown")
-                .openConnection();
+        HttpURLConnection conn = (HttpURLConnection) URI.create("http://localhost:" + serverPort + "/api/unknown")
+                .toURL().openConnection();
         conn.setRequestMethod("GET");
 
         assertEquals(404, conn.getResponseCode());
     }
 
+    // ==================== Association Navigation Tests ====================
+
+    @Test
+    @DisplayName("GET /api/persons-with-addresses uses real LEFT OUTER JOIN")
+    void testGetPersonsWithAddresses() throws Exception {
+        String response = httpGet("/api/persons-with-addresses");
+
+        System.out.println("Persons with addresses: " + response);
+
+        // John has 2 addresses: 123 Main St (New York), 456 Oak Ave (Boston)
+        assertTrue(response.contains("\"firstName\":\"John\""));
+        assertTrue(response.contains("\"street\":\"123 Main St\""));
+        assertTrue(response.contains("\"street\":\"456 Oak Ave\""));
+
+        // Jane has 1 address: 789 Main Rd (Chicago)
+        assertTrue(response.contains("\"firstName\":\"Jane\""));
+        assertTrue(response.contains("\"street\":\"789 Main Rd\""));
+
+        // Bob has 1 address: 999 Pine Lane (Detroit)
+        assertTrue(response.contains("\"firstName\":\"Bob\""));
+        assertTrue(response.contains("\"street\":\"999 Pine Lane\""));
+    }
+
+    @Test
+    @DisplayName("GET /api/persons-by-city/{city} uses real EXISTS subquery")
+    void testGetPersonsByCity() throws Exception {
+        // John lives in Boston (one of his addresses)
+        String bostonResponse = httpGet("/api/persons-by-city/Boston");
+        System.out.println("Persons in Boston: " + bostonResponse);
+        assertTrue(bostonResponse.contains("\"firstName\":\"John\""));
+        assertFalse(bostonResponse.contains("\"firstName\":\"Jane\""));
+        assertFalse(bostonResponse.contains("\"firstName\":\"Bob\""));
+
+        // Jane lives in Chicago
+        String chicagoResponse = httpGet("/api/persons-by-city/Chicago");
+        System.out.println("Persons in Chicago: " + chicagoResponse);
+        assertTrue(chicagoResponse.contains("\"firstName\":\"Jane\""));
+        assertFalse(chicagoResponse.contains("\"firstName\":\"John\""));
+
+        // No one in Miami
+        String miamiResponse = httpGet("/api/persons-by-city/Miami");
+        System.out.println("Persons in Miami: " + miamiResponse);
+        assertEquals("[]", miamiResponse);
+    }
+
     // ==================== JSON Serialization Tests ====================
 
     @Test
-    @DisplayName("ResultSetJsonSerializer produces valid JSON")
+    @DisplayName("ResultSetJsonSerializer produces valid JSON for various types")
     void testJsonSerializer() throws Exception {
         try (Statement stmt = connection.createStatement();
                 ResultSet rs = stmt.executeQuery(
@@ -222,55 +335,59 @@ class HostedServiceIntegrationTest {
     }
 
     @Test
-    @DisplayName("ResultSetJsonSerializer handles null values")
+    @DisplayName("ResultSetJsonSerializer handles null values correctly")
     void testJsonSerializerNulls() throws Exception {
+        // Create a query that produces NULL values naturally via LEFT JOIN
+        // Person ID 99 has no address, so LEFT JOIN will produce NULL for address
+        // columns
         try (Statement stmt = connection.createStatement()) {
-            stmt.execute("INSERT INTO T_PERSON VALUES (99, NULL, 'NullFirst', NULL)");
+            stmt.execute("INSERT INTO T_PERSON VALUES (99, 'NoAddress', 'Person', 99)");
         }
 
         try (Statement stmt = connection.createStatement();
                 ResultSet rs = stmt.executeQuery(
-                        "SELECT FIRST_NAME as \"firstName\", LAST_NAME as \"lastName\", AGE as \"age\" " +
-                                "FROM T_PERSON WHERE ID = 99")) {
+                        "SELECT p.FIRST_NAME as \"firstName\", a.STREET as \"street\" " +
+                                "FROM T_PERSON p LEFT OUTER JOIN T_ADDRESS a ON p.ID = a.PERSON_ID " +
+                                "WHERE p.ID = 99")) {
 
             String json = ResultSetJsonSerializer.serializeAsArray(rs);
             System.out.println("JSON with nulls: " + json);
 
-            assertTrue(json.contains("null"));
-            assertTrue(json.contains("\"lastName\":\"NullFirst\""));
+            assertTrue(json.contains("\"firstName\":\"NoAddress\""));
+            assertTrue(json.contains("\"street\":null"));
         }
     }
 
     @Test
-    @DisplayName("ResultSetJsonSerializer escapes special characters")
+    @DisplayName("ResultSetJsonSerializer escapes special characters in strings")
     void testJsonSerializerEscaping() throws Exception {
         try (Statement stmt = connection.createStatement()) {
-            stmt.execute("INSERT INTO T_PERSON VALUES (98, 'Quote\"Test', 'New\nLine', 20)");
+            stmt.execute("INSERT INTO T_PERSON VALUES (98, 'Quote\"Test', 'Tab\tPerson', 20)");
         }
 
         try (Statement stmt = connection.createStatement();
                 ResultSet rs = stmt.executeQuery(
-                        "SELECT FIRST_NAME as \"firstName\", LAST_NAME as \"lastName\" " +
-                                "FROM T_PERSON WHERE ID = 98")) {
+                        "SELECT FIRST_NAME as \"firstName\", LAST_NAME as \"lastName\" FROM T_PERSON WHERE ID = 98")) {
 
             String json = ResultSetJsonSerializer.serializeAsArray(rs);
             System.out.println("JSON with escaping: " + json);
 
-            // Should contain escaped quote and newline
-            assertTrue(json.contains("\\\""));
-            assertTrue(json.contains("\\n"));
+            // Should contain escaped quote and tab
+            assertTrue(json.contains("\\\"")); // Escaped quote
+            assertTrue(json.contains("\\t")); // Escaped tab
         }
     }
 
     // ==================== Helper Methods ====================
 
     private String httpGet(String path) throws Exception {
-        HttpURLConnection conn = (HttpURLConnection) new URL("http://localhost:" + serverPort + path).openConnection();
+        HttpURLConnection conn = (HttpURLConnection) URI.create("http://localhost:" + serverPort + path).toURL()
+                .openConnection();
         conn.setRequestMethod("GET");
         conn.setConnectTimeout(5000);
         conn.setReadTimeout(5000);
 
-        assertEquals(200, conn.getResponseCode(), "Expected 200 OK");
+        assertEquals(200, conn.getResponseCode(), "Expected 200 OK for path: " + path);
 
         try (BufferedReader reader = new BufferedReader(
                 new InputStreamReader(conn.getInputStream(), StandardCharsets.UTF_8))) {
@@ -280,216 +397,6 @@ class HostedServiceIntegrationTest {
                 response.append(line);
             }
             return response.toString();
-        }
-    }
-
-    // ==================== Association Navigation Tests ====================
-
-    /**
-     * Test class that sets up Person + Address with association for testing.
-     */
-    @Nested
-    @DisplayName("Association Navigation via HTTP")
-    class AssociationNavigationTests {
-
-        private ServiceServer assocServer;
-        private int assocServerPort;
-        private Connection assocConnection;
-
-        @BeforeEach
-        void setUpAssociations() throws Exception {
-            // Create separate in-memory DuckDB for association tests
-            assocConnection = DriverManager.getConnection("jdbc:duckdb:");
-
-            try (Statement stmt = assocConnection.createStatement()) {
-                // Create Person table
-                stmt.execute("""
-                        CREATE TABLE T_PERSON (
-                            ID INTEGER PRIMARY KEY,
-                            FIRST_NAME VARCHAR(100),
-                            LAST_NAME VARCHAR(100)
-                        )
-                        """);
-
-                // Create Address table with FK to Person
-                stmt.execute("""
-                        CREATE TABLE T_ADDRESS (
-                            ID INTEGER PRIMARY KEY,
-                            PERSON_ID INTEGER,
-                            STREET VARCHAR(200),
-                            CITY VARCHAR(100)
-                        )
-                        """);
-
-                // Insert Person data
-                stmt.execute("INSERT INTO T_PERSON VALUES (1, 'John', 'Smith')");
-                stmt.execute("INSERT INTO T_PERSON VALUES (2, 'Jane', 'Doe')");
-
-                // Insert Address data (John has 2 addresses, Jane has 1)
-                stmt.execute("INSERT INTO T_ADDRESS VALUES (1, 1, '123 Main St', 'New York')");
-                stmt.execute("INSERT INTO T_ADDRESS VALUES (2, 1, '456 Oak Ave', 'Boston')");
-                stmt.execute("INSERT INTO T_ADDRESS VALUES (3, 2, '789 Pine Rd', 'Chicago')");
-            }
-
-            // Create registry with association-aware services
-            ServiceRegistry registry = new ServiceRegistry();
-
-            // Service: Get persons with their addresses (LEFT OUTER JOIN)
-            ServiceDefinition personWithAddressesDef = ServiceDefinition.of(
-                    "model::PersonsWithAddresses",
-                    "/api/persons-with-addresses",
-                    "Person.all()->project({p | $p.firstName}, {p | $p.addresses.street}, {p | $p.addresses.city})",
-                    "Returns all persons with their addresses");
-            registry.register(personWithAddressesDef, (pathParams, queryParams, conn) -> {
-                // Simulate the SQL that association navigation generates
-                String sql = """
-                        SELECT "t0"."FIRST_NAME" AS "firstName",
-                               "j1"."STREET" AS "street",
-                               "j1"."CITY" AS "city"
-                        FROM "T_PERSON" AS "t0"
-                        LEFT OUTER JOIN "T_ADDRESS" AS "j1" ON "t0"."ID" = "j1"."PERSON_ID"
-                        """;
-                try (Statement stmt = conn.createStatement();
-                        ResultSet rs = stmt.executeQuery(sql)) {
-                    return ResultSetJsonSerializer.serializeAsArray(rs);
-                }
-            });
-
-            // Service: Get persons filtered by address city (EXISTS subquery)
-            ServiceDefinition personByCityDef = ServiceDefinition.of(
-                    "model::PersonsByCity",
-                    "/api/persons-by-city/{city}",
-                    "Person.all()->filter({p | $p.addresses.city == $city})->project({p | $p.firstName})",
-                    "Returns persons who have an address in the specified city");
-            registry.register(personByCityDef, (pathParams, queryParams, conn) -> {
-                String city = pathParams.get("city");
-                // Simulate the SQL that association filter generates (EXISTS)
-                String sql = """
-                        SELECT "t0"."FIRST_NAME" AS "firstName"
-                        FROM "T_PERSON" AS "t0"
-                        WHERE EXISTS (
-                            SELECT 1 FROM "T_ADDRESS" AS "sub1"
-                            WHERE ("sub1"."PERSON_ID" = "t0"."ID" AND "sub1"."CITY" = ?)
-                        )
-                        """;
-                try (PreparedStatement stmt = conn.prepareStatement(sql)) {
-                    stmt.setString(1, city);
-                    try (ResultSet rs = stmt.executeQuery()) {
-                        return ResultSetJsonSerializer.serializeAsArray(rs);
-                    }
-                }
-            });
-
-            // Service: Get addresses for a specific person (path param + JOIN)
-            ServiceDefinition addressesByPersonDef = ServiceDefinition.of(
-                    "model::AddressesByPerson",
-                    "/api/addresses/{personId}",
-                    "Address.all()->filter({a | $a.person.id == $personId})",
-                    "Returns addresses for a specific person");
-            registry.register(addressesByPersonDef, (pathParams, queryParams, conn) -> {
-                int personId = Integer.parseInt(pathParams.get("personId"));
-                String sql = """
-                        SELECT "t0"."STREET" AS "street", "t0"."CITY" AS "city"
-                        FROM "T_ADDRESS" AS "t0"
-                        WHERE "t0"."PERSON_ID" = ?
-                        """;
-                try (PreparedStatement stmt = conn.prepareStatement(sql)) {
-                    stmt.setInt(1, personId);
-                    try (ResultSet rs = stmt.executeQuery()) {
-                        return ResultSetJsonSerializer.serializeAsArray(rs);
-                    }
-                }
-            });
-
-            // Start server
-            assocServer = new ServiceServer(0, registry, () -> assocConnection);
-            assocServer.start();
-            assocServerPort = assocServer.getPort();
-        }
-
-        @AfterEach
-        void tearDownAssociations() throws Exception {
-            if (assocServer != null) {
-                assocServer.stop(0);
-            }
-            if (assocConnection != null) {
-                assocConnection.close();
-            }
-        }
-
-        @Test
-        @DisplayName("GET /api/persons-with-addresses returns person data with JOINed addresses")
-        void testGetPersonsWithAddresses() throws Exception {
-            String response = httpGetAssoc("/api/persons-with-addresses");
-
-            System.out.println("Persons with addresses: " + response);
-
-            // John has 2 addresses, Jane has 1 = 3 rows total
-            // Verify John appears with both addresses
-            assertTrue(response.contains("\"firstName\":\"John\""));
-            assertTrue(response.contains("\"street\":\"123 Main St\""));
-            assertTrue(response.contains("\"street\":\"456 Oak Ave\""));
-
-            // Verify Jane appears with her address
-            assertTrue(response.contains("\"firstName\":\"Jane\""));
-            assertTrue(response.contains("\"street\":\"789 Pine Rd\""));
-        }
-
-        @Test
-        @DisplayName("GET /api/persons-by-city/{city} uses EXISTS for to-many filter")
-        void testGetPersonsByCity() throws Exception {
-            // John lives in Boston
-            String bostonResponse = httpGetAssoc("/api/persons-by-city/Boston");
-            System.out.println("Persons in Boston: " + bostonResponse);
-            assertTrue(bostonResponse.contains("\"firstName\":\"John\""));
-            assertFalse(bostonResponse.contains("\"firstName\":\"Jane\""));
-
-            // Jane lives in Chicago
-            String chicagoResponse = httpGetAssoc("/api/persons-by-city/Chicago");
-            System.out.println("Persons in Chicago: " + chicagoResponse);
-            assertTrue(chicagoResponse.contains("\"firstName\":\"Jane\""));
-            assertFalse(chicagoResponse.contains("\"firstName\":\"John\""));
-
-            // No one in Miami
-            String miamiResponse = httpGetAssoc("/api/persons-by-city/Miami");
-            System.out.println("Persons in Miami: " + miamiResponse);
-            assertEquals("[]", miamiResponse);
-        }
-
-        @Test
-        @DisplayName("GET /api/addresses/{personId} returns addresses for specific person")
-        void testGetAddressesByPerson() throws Exception {
-            // John (ID 1) has 2 addresses
-            String johnAddresses = httpGetAssoc("/api/addresses/1");
-            System.out.println("John's addresses: " + johnAddresses);
-            assertTrue(johnAddresses.contains("\"street\":\"123 Main St\""));
-            assertTrue(johnAddresses.contains("\"street\":\"456 Oak Ave\""));
-
-            // Jane (ID 2) has 1 address
-            String janeAddresses = httpGetAssoc("/api/addresses/2");
-            System.out.println("Jane's addresses: " + janeAddresses);
-            assertTrue(janeAddresses.contains("\"street\":\"789 Pine Rd\""));
-            assertFalse(janeAddresses.contains("Main St"));
-        }
-
-        private String httpGetAssoc(String path) throws Exception {
-            HttpURLConnection conn = (HttpURLConnection) new URL("http://localhost:" + assocServerPort + path)
-                    .openConnection();
-            conn.setRequestMethod("GET");
-            conn.setConnectTimeout(5000);
-            conn.setReadTimeout(5000);
-
-            assertEquals(200, conn.getResponseCode(), "Expected 200 OK for " + path);
-
-            try (BufferedReader reader = new BufferedReader(
-                    new InputStreamReader(conn.getInputStream(), StandardCharsets.UTF_8))) {
-                StringBuilder response = new StringBuilder();
-                String line;
-                while ((line = reader.readLine()) != null) {
-                    response.append(line);
-                }
-                return response.toString();
-            }
         }
     }
 }
